--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,8 +20,10 @@
           <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-          <a href="{{ '/method1' | prepend: site.baseurl }}">Method 1</a><br/>
-          <a href="{{ '/method2' | prepend: site.baseurl }}">Method 2</a>
+          <a href="{{ '/method1' | prepend: site.baseurl }}">Overview</a><br/>
+          <a href="{{ '/method2' | prepend: site.baseurl }}">Point-in-Time</a>
+          <a href="{{ '/method3' | prepend: site.baseurl }}">Longitudinal</a>
+
       </div>
       
       <a class="sidebar-nav-item {% if page.url == node.url %} active{% endif %}" href="{{ '/results' | prepend: site.baseurl }}">Results</a>
