--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -21,7 +21,7 @@
       </button>
       <div class="dropdown-container">
           <a href="{{ '/method1' | prepend: site.baseurl }}">Overview</a><br/>
-          <a href="{{ '/method2' | prepend: site.baseurl }}">Point-in-Time</a>
+          <a href="{{ '/method2' | prepend: site.baseurl }}">Point-in-Time</a><br/>
           <a href="{{ '/method3' | prepend: site.baseurl }}">Longitudinal</a>
 
       </div>
