--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,9 +20,9 @@
           <i class="fa fa-caret-down"></i>
       </button>
       <div class="dropdown-container">
-          <a href="{{ '/method1' | prepend: site.baseurl }}">Overview</a><br/>
-          <a href="{{ '/method2' | prepend: site.baseurl }}">Point-in-Time</a><br/>
-          <a href="{{ '/method3' | prepend: site.baseurl }}">Longitudinal</a>
+          <a href="{{ '/methods' | prepend: site.baseurl }}">Overview</a><br/>
+          <a href="{{ '/method1' | prepend: site.baseurl }}">Point-in-Time</a><br/>
+          <a href="{{ '/method2' | prepend: site.baseurl }}">Longitudinal</a>
 
       </div>
       
