--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -57,7 +57,7 @@ html {
   text-align: center;
   padding: 2rem 1rem;
   color: rgba(255,255,255,.5);
-  background-color: #202020;
+  background-color: #4B2E83;
 }
 @media (min-width: 48em) {
   .sidebar {
@@ -285,11 +285,11 @@ a.sidebar-nav-item:hover{
 
 /* Magenta */
 .theme-base-0e .sidebar {
-  background-color: #aa759f;
+  background-color: #4B2E83;
 }
 .theme-base-0e .content a,
 .theme-base-0e .related-posts li a:hover {
-  color: #aa759f;
+  color: #4B2E83;
 }
 
 /* Brown */
